# string-art

./: CMakeLists.txt  README.md  stringart.py
src/: main.cpp
